# Fundamentos

./: .gitignore  LICENSE  Notebooks encontro01_2026_lantri.ipynb  README.md  classificador_instabilidade.py  encontro01_2026_lantri.ipynb  noticias_classificadas_31_dias.csv  noticias_classificadas_sample.json  pyproject.toml  skill01.md
.jupyter/: jupyter_server_config.py  strip_notebook.py
notebooks/: encontro01_2026_lantri.ipynb
notebooks/Declarações_e_Planos/: AI_CONTINENT_ACTION_PLAN.json  AI_PLUS.json  AMERICA_AI_ACTION_PLAN.json  AMERICA_AI_ACTION_PLAN_texto.txt  Análise_AI_CONTINENT_ACTION_PLAN.ipynb  Análise_AI_PLUS.ipynb  Análise_AMÉRICA_AI_ACTION_PLAN.ipynb  Análise_Apply_AI_Strategy.ipynb  Análise_BRICS.ipynb  Análise_China_New_Gen.ipynb  Análise_OCDE.ipynb  Análise_PBIA.ipynb  Apply_AI_Strategy.json  BRICS.json  China_New_Gen.json  Comparações.ipynb  Estudo Gráfico.ipynb  OCDE.json  PBIA.json
notebooks/MRE/: Gráficos_MRE.ipynb  MRE_Concórdia.ipynb  MRE_Notas.ipynb
notebooks/OCDE/: OECD_AI.ipynb
notebooks/brics/: BRICS.ipynb
notebooks/china/: MFA_China.ipynb  MRE_China.ipynb  nota_mfa.json
notebooks/g20/: G20.ipynb
notebooks/serpro/: Serpro.ipynb
